# PID

./: .gitignore  README.md  pyproject.toml
docs/: cnn_main.typ  scraping.md
docs/primera_memoria/: objetivo_del_proyecto.md
docs/primera_memoria/cnns/: bibliografia.bib
docs/primera_memoria/cnns/secciones/: 3-redes_multilabel.typ
docs/secciones/: 1-introduccion.typ  2-background.typ
memoria/: README.md  bibliografía.bib  main.typ
memoria/secciones/: 1-introducción.typ  2-planteamiento.typ  3-implementación.typ  4-experimentación.typ  5-conclusiones.typ  ejemplos_bórrame.typ
memoria/utils/: tables.typ
scripts/: descarga_imagenes.py  lectura_dataset_pandas.ipynb  script_muestra_peliculas.py
src/: cnn.ipynb  juzgando_por_la_portada.ipynb
